--- a/resturent.html
+++ b/resturent.html
@@ -22,24 +22,24 @@
       <input placeholder="Enter Item Name" type="text" required id="pname" name="pname" >&nbsp;&nbsp;&nbsp;
 
 
-      <label for="select">Choose Category:</label>
+      <label for="select">Choose Table:</label>
       <select id="select" name="select">
-          <option value="mobile">Mobile</option>
-          <option value="food">Food</option>
-          <option value="fashion">Fashion</option>
+          <option value="Table1">Chiken</option>
+          <option value="Table2">Biryani</option>
+          <option value="Table3">frons</option>
       </select>&nbsp;&nbsp;&nbsp;
 
 
       <input type="submit" value="Add Product" style="color: yellow; background-color: black; border-radius: 50px;">
     </form>
   
-    <h2 style="padding-left: 20px; color: blue;">Mobile Products</h2>
+    <h2 style="padding-left: 20px; color: blue;">Table1 Orders</h2>
     <ul id="mobilelist"></ul>
   
-    <h2 style="padding-left: 20px; color: blue;">Food Products</h2>
+    <h2 style="padding-left: 20px; color: blue;">Table2 Orders</h2>
     <ul id="foodlist"></ul>
   
-    <h2 style="padding-left: 20px; color: blue;">Fashion Products</h2>
+    <h2 style="padding-left: 20px; color: blue;">Table3 Orders</h2>
     <ul id="fashionlist"></ul>
   
     <script src="resturent.js"></script>
